[tool.poetry]
name = "cryptography-lab"
version = "0.1.0"
description = ""
authors = ["davidchulakov <chulakov008@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
pydantic = "^2.9.2"
sqlalchemy = "^2.0.35"
pydantic-settings = "^2.5.2"
pytest = "^8.3.3"
async-asgi-testclient = "^1.4.11"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"
ruff = "^0.6.9"
pytest-anyio = "^0.0.0"
trio = "^0.26.2"
anyio = "^4.6.2.post1"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.115.2"

[tool.pytest.ini_options]
addopts = "-ra -q -s"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
